--- a/composer.json
+++ b/composer.json
@@ -16,13 +16,16 @@
     ],
     "require": {
         "composer/installers": "^1.9",
+        "drupal/admin_toolbar": "^3.1",
         "drupal/core-composer-scaffold": "^9.3",
         "drupal/core-project-message": "^9.3",
-        "drupal/core-recommended": "^9.3"
+        "drupal/core-recommended": "^9.3",
+        "drupal/devel": "^4.1"
     },
     "require-dev": {
-        "roave/security-advisories": "dev-latest",
-        "drupal/core-dev": "^9.3"
+        "drupal/core-dev": "^9.3",
+        "drush/drush": "^11.0",
+        "roave/security-advisories": "dev-latest"
     },
     "conflict": {
         "drupal/drupal": "*"
